# EduMetric_AI

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 514df469f90b_add_grading_results.py  90111e9d9095_init_tables.py  a2c2f312abfb_create_users_table.py
backend/app/: main.py
backend/app/core/: celery_app.py  config.py  llm.py  security.py  supabase.py
backend/app/db/: seed.py  session.py
backend/app/dependencies/: auth.py  roles.py
backend/app/models/: __init__.py  assignment.py  enums.py  grading_result.py  submission.py  teacher.py  user.py
backend/app/routers/: assignment.py  auth.py  grading.py  grading_result.py  submission.py
backend/app/schemas/: assignment.py  auth.py  grading_result.py  submission.py  teacher.py  user.py
backend/app/services/: assignment_service.py  auth_service.py  grading_result_service.py  grading_service.py  submission_service.py
backend/app/tasks/: grading_tasks.py
backend/app/utils/: grader.py  text_chunker.py  text_extractor.py
