[project]
name = "edu-enhanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "line-profiler>=5.0.2",
    "locust>=2.44.0",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "slowapi>=0.1.9",
    "snakeviz>=2.2.2",
    "sqlalchemy>=2.0.50",
    "supabase>=2.30.0",
    "uvicorn>=0.48.0",
]
